# Solid-bodies-displacement-simulation-with-finite-element-method

./: .gitignore  CMakeLists.txt  Makefile
examples/omega/: dirichlet.txt  neuman.txt  omega.geo  omega.msh
examples/small_test/: dirichlet.txt  neuman.txt  parameters.txt  small_test.geo  small_test.msh
src/: CMakeLists.txt  DirichletSolver.cpp  DirichletSolver.h  DirichletSolverInterface.h  Mesh.cpp  Mesh.h  MshMeshLoader.cpp  MshMeshLoader.h  NeumanCondition.cpp  NeumanCondition.h  NeumanConditionInterface.h  Node.cpp  Node.h  OFFMeshLoader.cpp  OFFMeshLoader.h  TriangleElement.cpp  TriangleElement.h  TriangleElementWrapper.cpp  TriangleElementWrapper.h  main.cpp
